[metadata]
name = vp-qe-test-common
version = 0.1.0
description = QE Test Common for Validated Patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://validatedpatterns.io
author = Multi Product Quality Engineering
author_email = validatedpatterns-qe@redhat.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pytest
    pyyaml
    openshift
    openshift-python-wrapper
python_requires = >=3.6
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .

[options.extras_require]
integration =
interop =
